--- a/_pages/achievements.html
+++ b/_pages/achievements.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Awards and Achievements"
 permalink: /achievements/
 author_profile: true
 ---
@@ -11,6 +11,6 @@ author_profile: true
 
 {% endif %}
 
-{% for post in site.talks reversed %}
+{% for post in site.achievements reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
